# Imtiaz-Mart-API

./: README.md  compose.yaml  gateway-startup.sh  statestore.yaml
.github/workflows/: deploy.yml
Inventory Service/: Dockerfile
Inventory_Service/: Dockerfile  Dockerfile.prod  pyproject.toml
Inventory_Service/service4/: database.py  main.py  models.py  service.py  setting.py
Inventory_Service/service4/crud/: inventory_crud.py
Inventory_Service/service4/models/: inventory_model.py
Notification Service/: Dockerfile
Notification_Service/: .env  Dockerfile  Dockerfile.prod  pyproject.toml
Notification_Service/service5/: db.py  main.py  order.proto  services.py  settings.py  user_pb2.py
Order Service/: Dockerfile  pyproject.toml
Order_Service/: .env  Dockerfile  Dockerfile.prod  pyproject.toml
Order_Service/service3/: main.py  models.py  order_pb2.py  service.py  setting.py
Payment Service/: Dockerfile  pyproject.toml
Payment_Service/: Dockerfile  Dockerfile.prod  pyproject.toml
Payment_Service/service6/: db.py  main.py  model.py  service.py  settings.py
Product_Service/: .env  Dockerfile  Dockerfile.dev  Dockerfile.prod  pyproject.toml
Product_Service/service2/: db.py  main.py  models.py  services.py  settings.py
Product_Service/service2/crud/: product_crud.py
Product_Service/service2/models/: product_models.py
User_Service/: .env  Dockerfile  Dockerfile.prod  pyproject.toml
User_Service/.devcontainer/: devcontainer.json
User_Service/service1/: curd.py  db.py  main.py  models.py  services.py  settings.py
User_Service/service1/crud/: user_crud.py
User_Service/service1/database/: db.py
User_Service/service1/kafka/: producer.py
component/: kafka.yaml
components/: notification-subscriptions.yml  order-kafka.yml  user-kafka.yml  userkafka.yml
config/: kong.yml
inventory-service/: Dockerfile  Dockerfile.prod  pyproject.toml
inventory-service/service4/: main.py  service.py  setting.py
inventory-service/service4/models/: product_model.py  user_model.py
notification-service/: Dockerfile  Dockerfile.dev  pyproject.toml
notification-service/components/: pubsub.yaml  subscription.yaml
notification-service/service5/: main.py  order_pb2.py  services.py  settings.py  user.proto
notification-service/service5/kafka/: consumers.py
notification-service/service5/models/: email_model.py
order-service/: Dockerfile  Dockerfile.prod  pyproject.toml
order-service/components/: pubsub.yaml
order-service/service3/: main.py  service.py  setting.py
order-service/service3/database/: db.py
order-service/service3/kafka/: producer.py
order-service/service3/models/: cart_models.py  inventory_models.py  order_models.py  product_models.py  user_models.py
order-service/service3/protobuf/: order.proto
payment-service/: Dockerfile  Dockerfile.dev  pyproject.toml
payment-service/.devcontainer/: devcontainer.json
payment-service/service6/: db.py  main.py  model.py  service.py  settings.py
product-service/: Dockerfile  Dockerfile.prod
product-service/service2/: settings.py
product-service/service2/crud/: product_crud.py
product-service/service2/models/: inventory_models.py  user_models.py
specs-combiner/: Dockerfile  pyproject.toml
specs-combiner/app/: main.py
user-service/: Dockerfile  Dockerfile.dev  entrypoint.sh  pyproject.toml
user-service/components/: pubsub.yaml
user-service/service1/: main.py  services.py  settings.py
user-service/service1/crud/: user_crud.py
user-service/service1/models/: user_models.py
