[tool.poetry]
name = "notification service"
version = "0.1.0"
description = "Sends notifications (email, SMS) to users about order statuses and other updates."
authors = ["Syed Kamil Zafar <kamilzafar54@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
python = "^3.11"
fastapi = "^0.111.0"
sqlmodel = "^0.0.19"
uvicorn = {extras = ["standard"], version = "^0.30.1"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
psycopg2 = "^2.9.9"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
requests = "^2.32.3"
fastapi-mail = "^1.0.1"
email-validator = "^1.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
