[tool.poetry]
name = "product service"
version = "0.1.0"
description = "Manages product catalog, including CRUD operations for products."
authors = ["Syed Kamil Zafar <kamilzafar54@gmail.com>"]
readme = "README.md"
package-mode = false


[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.30.1"}
sqlmodel = "^0.0.19"
aiokafka = "^0.10.0"
psycopg2 = "^2.9.9"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
