[tool.poetry]
name = "notification service"
version = "0.1.0"
description = "Sends notifications (email, SMS) to users about order statuses and other updates."
authors = ["Syed Kamil Zafar <kamilzafar54@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
sqlmodel = "^0.0.19"
uvicorn = {extras = ["standard"], version = "^0.30.1"}
aiokafka = "^0.10.0"
protobuf = "^5.27.2"
fastapi-mail = "^1.4.1"
psycopg2 = "^2.9.9"
dapr = "^1.14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
